frontend/tests/cases/positive/polymorphism/scopedVariables.gr
-- gr --no-eval

id2 : ∀ {a : Type} . a → a
id2 x = x

id : ∀ {a : Type} . a → a
id = id2 (λ(x : a) → x)
