frontend/tests/cases/negative/badPoly2.gr
id : ∀ {a : Type} . a → a
id x = x + 0
